--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -77,6 +77,6 @@
 
 @layer components {
   .page-wrapper {
-    @apply container relative z-10 md:rounded-lg md:-mt-16 md:mb-12 bg-theme-dark_1 shadow-md border border-theme-dark_2 min-h-svh;
+    @apply container py-6 md:py-9 px-4 md:px-8 relative z-10 md:rounded-lg md:-mt-16 md:mb-12 bg-theme-dark_1 shadow-md border border-theme-dark_2 min-h-svh;
   }
 }
